app/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%; /* #FFFFFF */
    --foreground: 0 0% 3.9%; /* #0A0A0A */
    --card: 0 0% 100%; /* #FFFFFF */
    --card-foreground: 0 0% 3.9%; /* #0A0A0A */
    --popover: 0 0% 100%; /* #FFFFFF */
    --popover-foreground: 0 0% 3.9%; /* #0A0A0A */
    --primary: 220 70% 50%; /* #1E5EFF */
    --primary-foreground: 0 0% 98%; /* #FAFAFA */
    --secondary: 0 0% 96.1%; /* #F5F5F5 */
    --secondary-foreground: 0 0% 9%; /* #171717 */
    --muted: 0 0% 96.1%; /* #F5F5F5 */
    --muted-foreground: 0 0% 45.1%; /* #737373 */
    --accent: 0 0% 96.1%; /* #F5F5F5 */
    --accent-foreground: 0 0% 9%; /* #171717 */
    --destructive: 0 84.2% 60.2%; /* #EF4444 */
    --destructive-foreground: 0 0% 98%; /* #FAFAFA */
    --border: 0 0% 89.8%; /* #E5E5E5 */
    --input: 0 0% 89.8%; /* #E5E5E5 */
    --ring: 220 70% 50%; /* #1E5EFF */
    --radius: 0.5rem;
  }
  .dark {
    --background: 0 0% 3.9%; /* #0A0A0A */
    --foreground: 0 0% 98%; /* #FAFAFA */
    --card: 0 0% 3.9%; /* #0A0A0A */
    --card-foreground: 0 0% 98%; /* #FAFAFA */
    --popover: 0 0% 3.9%; /* #0A0A0A */
    --popover-foreground: 0 0% 98%; /* #FAFAFA */
    --primary: 220 70% 60%; /* #4D7FFF  */
    --primary-foreground: 0 0% 98%; /* #171717 */
    --secondary: 0 0% 14.9%; /* #262626 */
    --secondary-foreground: 0 0% 98%; /* #FAFAFA */
    --muted: 0 0% 14.9%; /* #262626 */
    --muted-foreground: 0 0% 63.9%; /* #A3A3A3 */
    --accent: 0 0% 14.9%; /* #262626 */
    --accent-foreground: 0 0% 98%; /* #FAFAFA */
    --destructive: 0 84.2% 60.2%; /* #EF4444 */
    --destructive-foreground: 0 0% 98%; /* #FAFAFA */
    --border: 0 0% 14.9%; /* #262626 */
    --input: 0 0% 14.9%; /* #262626 */
    --ring: 220 70% 60%; /* #4D7FFF  */
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer components {
  .layout {
    @apply ml-auto mr-auto max-w-7xl scroll-mt-14 px-4 py-16 md:scroll-mt-20 md:py-24;
  }
}

::-webkit-scrollbar {
  width: 6px;
  height: 4px;
  border-radius: 0.5rem;
}
::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: hsl(var(--primary));
}

